Transition to ansible for AWS launch
Getting things working with Capacity Provider.  Waiting on AWS again.

Further updates to get load process working

--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,2 @@
 [eu_west_1_dev]
-localhost ansible_connection=local ansible_python_interpreter=/Users/jonpspri/.venv/ansible/bin/python
+localhost ansible_connection=local 
