--- a/ansible/group_vars/eu_west_1_dev.yaml
+++ b/ansible/group_vars/eu_west_1_dev.yaml
@@ -1,7 +1,8 @@
 subnets_v: 
-  - subnet-bf9d90d9
-  - subnet-c429358c
-  - subnet-c6327c9c
-security_group_v: sg-ae1692f5
+  - subnet-09dbef5db54484c23
+  - subnet-0e120bf7dee01c5f4
+  - subnet-073817aa3bd8b392b
+security_group_v: sg-03a55b229ccb741dc
 prefix_v: n7m-eu-west-1-dev
+region_v: eu-west-1
 osm_region_v: monaco
